--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -565,6 +565,11 @@ html, body {
     width: 700px;
 }
 
+.modal-img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .modal-header {
     position: relative;
     padding: 0;
